cluster/compact-bot/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: compact-bot
  labels:
    app.kubernetes.io/managed-by: kloud
    app.kubernetes.io/part-of: compact-bot
